--- a/details.html
+++ b/details.html
@@ -8,14 +8,17 @@
     <title></title>
 </head>
 <body>
+    <div class="alert"></div>
     <main>
-        <h1></h1>
-			<div class="totalConfirmed"></div>
-			<div class="newConfirmed"></div>
-			<div class="totalDeaths"></div>
-			<div class="newDeaths"></div>
-			<div class="totalRecovered"></div>
-			<div class="newRecovered"></div>
+        <div id="cards">
+            <h1></h1>
+            <div class="totalConfirmed"></div>
+            <div class="newConfirmed"></div>
+            <div class="totalDeaths"></div>
+            <div class="newDeaths"></div>
+            <div class="totalRecovered"></div>
+            <div class="newRecovered"></div>
+        </div>
     </main>
     <script src="/js/components/alert.js"></script>
     <script src="/js/details.js"></script>
