--- a/details.html
+++ b/details.html
@@ -12,12 +12,11 @@
     <main>
         <div id="cards">
             <h1></h1>
-            <div class="totalConfirmed"></div>
-            <div class="newConfirmed"></div>
-            <div class="totalDeaths"></div>
-            <div class="newDeaths"></div>
-            <div class="totalRecovered"></div>
-            <div class="newRecovered"></div>
+            <div class="setName"></div>
+            <div class="rarity"></div>
+            <div class="type"></div>
+            <div class="layout"></div>
+            <div class="artist"></div>
         </div>
     </main>
     <script src="/js/components/alert.js"></script>
