--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Covid-19 Cases By Countries</title>
+    <title>Magic the gathering</title>
 </head>
 <body>
     <div class="alert"></div>
     <div>
-        <h1>Covid-19 Cases By Countries</h1>
+        <h1>Magic the gathering</h1>
     </div>
+    <div class="contact"></div>
     <main></main>
     <script src="/js/components/alert.js"></script>
     <script src="/js/script.js"></script>
